--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                         520 Harvey R. Bright Building<br />
                         College Station, TX 77843-3112<br />
                         E-mail: <a href="mailto:yzluo@tamu.edu">yzluo@tamu.edu</a><br />
-                        <a href="files/cv.pdf">Curriculum Viate</a><br /></p>
+                        <a href="https://scholar.google.com/citations?user=3lqQFIoAAAAJ&hl=en">Google Scholar</a></p>
                         <a href="https://github.com/lyzustc"><img src="img/github.jpeg" alt="" width="25px" height="33px"></a>
                         <a href="https://www.linkedin.com/in/youzhi-luo-139981172/"><img src="img/btn_viewmy_160x33.png" alt="" width="160px" height="33px"></a>
                 </td>
             </tr>
         </table>
         <h2>Short Biography</h2>
-        <p>I am currently a first-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
+        <p>I am currently a second-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
             University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
         <h2>Research Interests</h2>
         <ul>
@@ -43,7 +43,7 @@
                 <p>Data Mining</p>
             </li>
             <li>
-                <p>Computer Vision</p>
+                <p>Computational Chemistry</p>
             </li>
         </ul>
 
@@ -60,11 +60,11 @@
             </li>
         </ul>
 
-        <h2>Publication(s)</h2>
-
         <h2>Services</h2>
-
-
+        <h3>Conference Reviewer</h3>
+        <ul>
+            <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining, 2020</p></li>
+        </ul>
         <div id="footer">
             <div id="footer-text">
                 Page generated 2016-08-15 14:09:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
