--- a/index.html
+++ b/index.html
@@ -46,25 +46,6 @@
                 <p>Computational Chemistry</p>
             </li>
         </ul>
-        
-        <h2>Preprints</h2>
-        <ul>
-            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
-            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
-            <a href="https://arxiv.org/abs/2012.01981">arXiv: 2012.01981</a>, 2020
-            <p>
-            <li><b>Youzhi Luo</b>, Keqiang Yan, and Shuiwang Ji<br /></li>
-            GraphDF: A Discrete Flow Model for Molecular Graph Generation<br />
-            <a href="https://arxiv.org/abs/2102.01189">arXiv: 2102.01189</a>, 2021
-            <p>
-            <li>Meng Liu*, <b>Youzhi Luo*</b>, Limei Wang*, Yaochen Xie*, Hao Yuan*, Shurui Gui, Zhao Xu, Haiyang Yu, Jingtun Zhang, Yi Liu, Keqiang Yan, Bora Oztekin, Haoran Liu, Xuan Zhang, Cong Fu, and Shuiwang Ji (* equal contribution)<br /></li>
-            DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
-            <a href="https://arxiv.org/abs/2103.12608">arXiv: 2103.12608</a>, 2021
-            <p>
-            <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
-            Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
-            <a href="https://arxiv.org/abs/2104.08736">arXiv: 2104.08736</a>, 2021  
-        </ul>
 
         <h2>Education</h2>
         <ul>
@@ -76,6 +57,28 @@
                 <p>B.E., Automation, <a href="http://en.ustc.edu.cn/">University of Science and Technology
                         of China</a>, September 2015 - July 2019</p>
             </li>
+        </ul>
+
+        <h2>Preprints</h2>
+        <ul>
+            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
+            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
+            <a href="https://arxiv.org/abs/2012.01981">arXiv: 2012.01981</a>, 2020
+            <p>
+            <li>Meng Liu*, <b>Youzhi Luo*</b>, Limei Wang*, Yaochen Xie*, Hao Yuan*, Shurui Gui*, Haiyang Yu*, Zhao Xu, Jingtun Zhang, Yi Liu, Keqiang Yan, Haoran Liu, Cong Fu, Bora Oztekin, Xuan Zhang, and Shuiwang Ji (* equal contribution)<br /></li>
+            DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
+            <a href="https://arxiv.org/abs/2103.12608">arXiv: 2103.12608</a>, 2021
+            <p>
+            <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
+            Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
+            <a href="https://arxiv.org/abs/2104.08736">arXiv: 2104.08736</a>, 2021  
+        </ul>
+
+        <h2>Publications</h2>
+        <ul>
+            <li><b>Youzhi Luo</b>, Keqiang Yan, and Shuiwang Ji<br /></li>
+            GraphDF: A Discrete Flow Model for Molecular Graph Generation<br />
+            The 38th International Conference on Machine Learning (<b>ICML</b>), 2021
         </ul>
 
         <h2>Services</h2>
