--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
                         <a href="http://engineering.tamu.edu/cse/">Department of Computer Science &
                             Engineering</a><br />
                         <a href="https://www.tamu.edu/">Texas A&M University</a><br />
-                        520 Harvey R. Bright Building<br />
-                        College Station, TX 77843-3112<br />
+                        364 L.F. Peterson Building<br />
+                        435 Nagle Street<br />
+                        College Station, TX 77843<br />
                         E-mail: <a href="mailto:yzluo@tamu.edu">yzluo@tamu.edu</a><br />
                         <a href="https://scholar.google.com/citations?user=3lqQFIoAAAAJ&hl=en">Google Scholar</a></p>
                         <a href="https://github.com/lyzustc"><img src="img/github.jpeg" alt="" width="25px" height="33px"></a>
@@ -71,7 +72,11 @@
             <p>
             <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
             Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
-            <a href="https://arxiv.org/abs/2104.08736">arXiv: 2104.08736</a>, 2021  
+            <a href="https://arxiv.org/abs/2104.08736">arXiv: 2104.08736</a>, 2021
+            <p>
+            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
+            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
+            <a href="https://arxiv.org/abs/2106.08551">arXiv: 2106.08551</a>, 2021
         </ul>
 
         <h2>Publications</h2>
