--- a/index.html
+++ b/index.html
@@ -62,25 +62,29 @@
 
         <h2>Preprints</h2>
         <ul>
-            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
-            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
-            <a href="https://arxiv.org/abs/2012.01981">arXiv: 2012.01981</a>, 2020
-            <p>
-            <li>Meng Liu*, <b>Youzhi Luo*</b>, Limei Wang*, Yaochen Xie*, Hao Yuan*, Shurui Gui*, Haiyang Yu*, Zhao Xu, Jingtun Zhang, Yi Liu, Keqiang Yan, Haoran Liu, Cong Fu, Bora Oztekin, Xuan Zhang, and Shuiwang Ji (* equal contribution)<br /></li>
-            DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
-            <a href="https://arxiv.org/abs/2103.12608">arXiv: 2103.12608</a>, 2021
-            <p>
-            <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
-            Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
-            <a href="https://arxiv.org/abs/2104.08736">arXiv: 2104.08736</a>, 2021
+            <li>Zhao Xu*, <b>Youzhi Luo*</b>, Xuan Zhang, Xinyi Xu, Yaochen Xie, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
+            Molecule3D: A Benchmark for Predicting 3D Geometries from Molecular Graphs<br />
+            <a href="https://arxiv.org/abs/2110.01717">arXiv: 2110.01717</a>, 2021
             <p>
             <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
             Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
             <a href="https://arxiv.org/abs/2106.08551">arXiv: 2106.08551</a>, 2021
+            <p>
+            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
+            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
+            <a href="https://arxiv.org/abs/2012.01981">arXiv: 2012.01981</a>, 2020            
         </ul>
 
         <h2>Publications</h2>
         <ul>
+            <li>Meng Liu*, <b>Youzhi Luo*</b>, Limei Wang*, Yaochen Xie*, Hao Yuan*, Shurui Gui*, Haiyang Yu*, Zhao Xu, Jingtun Zhang, Yi Liu, Keqiang Yan, Haoran Liu, Cong Fu, Bora Oztekin, Xuan Zhang, and Shuiwang Ji (* equal contribution)<br /></li>
+            DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
+            Journal of Machine Learning Research (<b>JMLR</b>), 2021
+            <p>
+            <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
+            Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
+            The 35th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021
+            <p>
             <li><b>Youzhi Luo</b>, Keqiang Yan, and Shuiwang Ji<br /></li>
             GraphDF: A Discrete Flow Model for Molecular Graph Generation<br />
             The 38th International Conference on Machine Learning (<b>ICML</b>), 2021
