--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
             Molecule3D: A Benchmark for Predicting 3D Geometries from Molecular Graphs<br />
             <a href="https://arxiv.org/abs/2110.01717">arXiv: 2110.01717</a>, 2021
             <p>
-            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
-            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
-            <a href="https://arxiv.org/abs/2106.08551">arXiv: 2106.08551</a>, 2021
-            <p>
             <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
             Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
             <a href="https://arxiv.org/abs/2012.01981">arXiv: 2012.01981</a>, 2020            
@@ -88,6 +84,10 @@
             <li><b>Youzhi Luo</b>, Keqiang Yan, and Shuiwang Ji<br /></li>
             GraphDF: A Discrete Flow Model for Molecular Graph Generation<br />
             The 38th International Conference on Machine Learning (<b>ICML</b>), 2021
+            <p>
+            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
+            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
+            NeurIPS 2021 AI for Science Workshop, 2021
         </ul>
 
         <h2>Services</h2>
