--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
             Journal of Machine Learning Research (<b>JMLR</b>), 2021
             <p>
-            <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
+            <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu*, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
             Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
             The 35th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021
             <p>
