--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </tr>
         </table>
         <h2>Short Biography</h2>
-        <p>I am currently a second-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
+        <p>I am currently a third-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
             University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
         <h2>Research Interests</h2>
         <ul>
@@ -73,6 +73,10 @@
 
         <h2>Publications</h2>
         <ul>
+            <li><b>Youzhi Luo</b>, and Shuiwang Ji<br /></li>
+            An Autoregressive Flow Model for 3D Molecular Geometry Generation<br />
+            The 10th International Conference on Learning Representations (<b>ICLR</b>), 2022
+            <p>
             <li>Meng Liu*, <b>Youzhi Luo*</b>, Limei Wang*, Yaochen Xie*, Hao Yuan*, Shurui Gui*, Haiyang Yu*, Zhao Xu, Jingtun Zhang, Yi Liu, Keqiang Yan, Haoran Liu, Cong Fu, Bora Oztekin, Xuan Zhang, and Shuiwang Ji (* equal contribution)<br /></li>
             DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
             Journal of Machine Learning Research (<b>JMLR</b>), 2021
@@ -93,7 +97,16 @@
         <h2>Services</h2>
         <h3>Conference Reviewer</h3>
         <ul>
-            <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining, 2020</p></li>
+            <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>), 2020</p></li>
+            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022</p></li>
+            <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022</p></li>
+        </ul>
+
+        <h2>Teaching</h2>
+        <h3>Guest Lecturer</h3>
+        <ul>
+            <li><p>Attention Mechanism, CSCE 636: Deep Learning, Texas A&M University, Fall 2021</p></li>
+            <li><p>Attention Mechanism, BMI 6334: Deep Learning in Biomedical Informatics, UTHealth School of Biomedical Informatics, Fall 2021</p></li>
         </ul>
         <div id="footer">
             <div id="footer-text">
