--- a/index.html
+++ b/index.html
@@ -62,17 +62,25 @@
 
         <h2>Preprints</h2>
         <ul>
-            <li>Zhao Xu*, <b>Youzhi Luo*</b>, Xuan Zhang, Xinyi Xu, Yaochen Xie, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
-            Molecule3D: A Benchmark for Predicting 3D Geometries from Molecular Graphs<br />
-            <a href="https://arxiv.org/abs/2110.01717">arXiv: 2110.01717</a>, 2021
+            <li><b>Youzhi Luo</b>, Michael McThrow, Wing Yee Au, Tao Komikado, Kanji Uchino, Koji Maruhashi, Shuiwang Ji</li>
+            Automated Data Augmentations for Graph Classification<br />
+            <a href="https://arxiv.org/abs/2202.13248">arXiv: 2202.13248</a>, 2022
             <p>
-            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
-            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
-            <a href="https://arxiv.org/abs/2012.01981">arXiv: 2012.01981</a>, 2020            
+            <li>Zhao Xu, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Yaochen Xie, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
+            Molecule3D: A Benchmark for Predicting 3D Geometries from Molecular Graphs<br />
+            <a href="https://arxiv.org/abs/2110.01717">arXiv: 2110.01717</a>, 2021            
         </ul>
 
         <h2>Publications</h2>
         <ul>
+            <li>Meng Liu, <b>Youzhi Luo</b>, Kanji Uchino, Koji Maruhashi, and Shuiwang Ji<br /></li>
+            Generating 3D Molecules for Target Protein Binding<br />
+            The 39th International Conference on Machine Learning (<b>ICML</b>), <b>Long Talk</b>, 2022
+            <p>
+            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
+            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
+            <b>Bioinformatics</b>, 2022
+            <p>
             <li><b>Youzhi Luo</b>, and Shuiwang Ji<br /></li>
             An Autoregressive Flow Model for 3D Molecular Geometry Generation<br />
             The 10th International Conference on Learning Representations (<b>ICLR</b>), 2022
@@ -81,6 +89,10 @@
             DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
             Journal of Machine Learning Research (<b>JMLR</b>), 2021
             <p>
+            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
+            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
+            NeurIPS 2021 AI for Science Workshop, 2021
+            <p>
             <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu*, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
             Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
             The 35th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021
@@ -88,10 +100,6 @@
             <li><b>Youzhi Luo</b>, Keqiang Yan, and Shuiwang Ji<br /></li>
             GraphDF: A Discrete Flow Model for Molecular Graph Generation<br />
             The 38th International Conference on Machine Learning (<b>ICML</b>), 2021
-            <p>
-            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
-            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
-            NeurIPS 2021 AI for Science Workshop, 2021
         </ul>
 
         <h2>Services</h2>
@@ -100,6 +108,7 @@
             <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>), 2020</p></li>
             <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022</p></li>
             <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022</p></li>
+            <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022</p></li>
         </ul>
 
         <h2>Teaching</h2>
