--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </tr>
         </table>
         <h2>Short Biography</h2>
-        <p>I am currently a third-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
+        <p>I am currently a fourth-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
             University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
         <h2>Research Interests</h2>
         <ul>
@@ -109,6 +109,8 @@
             <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022</p></li>
             <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022</p></li>
             <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022</p></li>
+            <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022</p></li>
+            <li><p>Learning on Graphs Conference (<b>LOGS</b>), 2022</p></li>
         </ul>
 
         <h2>Teaching</h2>
