--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <td>
                     <img src="img/profile.jpg" alt="photography" width="150px" height="180px" />&nbsp;</td>
                 <td align="left">
-                    <p><b>Youzhi Luo, Ph.D. student</b><br />
+                    <p><b>Youzhi Luo, Ph.D. candidate</b><br />
                         <a href="http://engineering.tamu.edu/cse/">Department of Computer Science &
                             Engineering</a><br />
                         <a href="https://www.tamu.edu/">Texas A&M University</a><br />
@@ -33,7 +33,7 @@
             </tr>
         </table>
         <h2>Short Biography</h2>
-        <p>I am currently a fourth-year Ph.D. student in Department of Computer Science & Engineering, Texas A&M
+        <p>I am currently a Ph.D. candidate in Department of Computer Science & Engineering, Texas A&M
             University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
         <h2>Research Interests</h2>
         <ul>
@@ -62,17 +62,25 @@
 
         <h2>Preprints</h2>
         <ul>
-            <li><b>Youzhi Luo</b>, Michael McThrow, Wing Yee Au, Tao Komikado, Kanji Uchino, Koji Maruhashi, Shuiwang Ji</li>
-            Automated Data Augmentations for Graph Classification<br />
-            <a href="https://arxiv.org/abs/2202.13248">arXiv: 2202.13248</a>, 2022
-            <p>
-            <li>Zhao Xu, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Yaochen Xie, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
-            Molecule3D: A Benchmark for Predicting 3D Geometries from Molecular Graphs<br />
-            <a href="https://arxiv.org/abs/2110.01717">arXiv: 2110.01717</a>, 2021            
+            <li>Zhao Xu, Yaochen Xie, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
+            3D Molecular Geometry Analysis with 2D Graphs<br />
+            <a href="https://arxiv.org/abs/2305.13315">arXiv: 2305.13315</a>, 2023          
         </ul>
 
         <h2>Publications</h2>
         <ul>
+            <li>Yuchao Lin, Keqiang Yan, <b>Youzhi Luo</b>, Yi Liu, Xiaoning Qian, and Shuiwang Ji<br /></li>
+            Efficient Approximations of Complete Interatomic Potentials for Crystal Property Prediction<br />
+            The 40th International Conference on Machine Learning (<b>ICML</b>), 2023
+            <p>
+            <li>Hongyi Ling, Zhimeng Jiang, <b>Youzhi Luo</b>, Shuiwang Ji, Na Zou.</li>
+            Learning Fair Graph Representations via Automated Data Augmentations<br />
+            The 11th International Conference on Learning Representations (<b>ICLR</b>), 2023
+            <p>
+            <li><b>Youzhi Luo</b>, Michael McThrow, Wing Yee Au, Tao Komikado, Kanji Uchino, Koji Maruhashi, Shuiwang Ji</li>
+            Automated Data Augmentations for Graph Classification<br />
+            The 11th International Conference on Learning Representations (<b>ICLR</b>), 2023
+            <p>
             <li>Meng Liu, <b>Youzhi Luo</b>, Kanji Uchino, Koji Maruhashi, and Shuiwang Ji<br /></li>
             Generating 3D Molecules for Target Protein Binding<br />
             The 39th International Conference on Machine Learning (<b>ICML</b>), <b>Long Talk</b>, 2022
@@ -105,10 +113,10 @@
         <h2>Services</h2>
         <h3>Conference Reviewer</h3>
         <ul>
-            <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>), 2020</p></li>
-            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022</p></li>
-            <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022</p></li>
-            <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022</p></li>
+            <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>), 2020, 2023</p></li>
+            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022, 2023</p></li>
+            <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022, 2023</p></li>
+            <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022, 2023</p></li>
             <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022</p></li>
             <li><p>Learning on Graphs Conference (<b>LOGS</b>), 2022</p></li>
         </ul>
@@ -116,7 +124,7 @@
         <h2>Teaching</h2>
         <h3>Guest Lecturer</h3>
         <ul>
-            <li><p>Attention Mechanism, CSCE 636: Deep Learning, Texas A&M University, Fall 2021</p></li>
+            <li><p>Attention Mechanism, CSCE 636: Deep Learning, Texas A&M University, Fall 2021, Fall 2022</p></li>
             <li><p>Attention Mechanism, BMI 6334: Deep Learning in Biomedical Informatics, UTHealth School of Biomedical Informatics, Fall 2021</p></li>
         </ul>
         <div id="footer">
