--- a/index.html
+++ b/index.html
@@ -33,8 +33,24 @@
             </tr>
         </table>
         <h2>Short Biography</h2>
-        <p>I am currently a Ph.D. candidate in Department of Computer Science & Engineering, Texas A&M
+        <p>I received my B.E. in Automation in 2019 from University of Science and Technology of China. I am currently a Ph.D. candidate in Department of Computer Science & Engineering, Texas A&M
             University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
+            <font color="bg-light">
+            I am actively looking for full-time applied scientist/research scientist/data scientist/machine learning engineer positions in industry. Feel free to contact me if you would like to offer good opportunities!
+        </font>
+
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <p>Ph.D., Computer Science, <a href="https://www.tamu.edu/">Texas A&M University</a>, September 2019 -
+                    May 2024 (Expected)</p>
+            </li>
+            <li>
+                <p>B.E., Automation, <a href="http://en.ustc.edu.cn/">University of Science and Technology
+                        of China</a>, September 2015 - July 2019</p>
+            </li>
+        </ul>
+
         <h2>Research Interests</h2>
         <ul>
             <li>
@@ -48,20 +64,28 @@
             </li>
         </ul>
 
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <p>Ph.D., Computer Science, <a href="https://www.tamu.edu/">Texas A&M University</a>, September 2019 -
-                    Present</p>
-            </li>
-            <li>
-                <p>B.E., Automation, <a href="http://en.ustc.edu.cn/">University of Science and Technology
-                        of China</a>, September 2015 - July 2019</p>
-            </li>
-        </ul>
-
         <h2>Preprints</h2>
         <ul>
+            <li>Xuan Zhang*, Limei Wang*, Jacob Helwig*, <b>Youzhi Luo*</b>, Cong Fu*, Yaochen Xie*, Meng Liu, Yuchao Lin, Zhao Xu, Keqiang Yan, Keir Adams, Maurice Weiler, Xiner Li, Tianfan Fu, Yucheng Wang, Haiyang Yu, YuQing Xie, Xiang Fu, Alex Strasser, Shenglong Xu, Yi Liu, Yuanqi Du, Alexandra Saxton, Hongyi Ling, Hannah Lawrence, Hannes Stark, Shurui Gui, Carl Edwards, Nicholas Gao, Adriana Ladera, Tailin Wu, Elyssa F. Hofgard, Aria Mansouri Tehrani, Rui Wang, Ameya Daigavane, Montgomery Bohde, Jerry Kurtin, Qian Huang, Tuong Phung, Minkai Xu, Chaitanya K. Joshi, Simon V. Mathis, Kamyar Azizzadenesheli, Ada Fang, Alan Aspuru-Guzik, Erik Bekkers, Michael Bronstein, Marinka Zitnik, Anima Anandkumar, Stefano Ermon, Pietro Lio, Rose Yu, Stephan Gunnemann, Jure Leskovec, Heng Ji, Jimeng Sun, Regina Barzilay, Tommi Jaakkola, Connor W. Coley, Xiaoning Qian, Xiaofeng Qian, Tess Smidt, and Shuiwang Ji (* equal contribution)</li>
+            Artificial Intelligence for Science in Quantum, Atomistic, and Continuum Systems<br />
+            <a href="https://arxiv.org/abs/2307.08423">arXiv: 2307.084235</a>, 2023
+            <p>
+            <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
+            Towards Symmetry-Aware Generation of Periodic Materials<br />
+            <a href="https://arxiv.org/abs/2307.02707">arXiv: 2307.02707</a>, 2023
+            <p>
+            <li>Haiyang Yu, Meng Liu, <b>Youzhi Luo</b>, Alex Strasser, Xiaofeng Qian, Xiaoning Qian, Shuiwang Ji</li>
+            QH9: A Quantum Hamiltonian Prediction Benchmark for QM9 Molecules<br />
+            <a href="https://arxiv.org/abs/2306.09549">arXiv: 2306.09549</a>, 2023
+            <p>
+            <li>Xiner Li, Shurui Gui, <b>Youzhi Luo</b>, Shuiwang Ji</li>
+            Graph Structure and Feature Extrapolation for Out-of-Distribution Generalization<br />
+            <a href="https://arxiv.org/abs/2306.08076">arXiv: 2306.08076</a>, 2023
+            <p>
+            <li>Shurui Gui, Meng Liu, Xiner Li, <b>Youzhi Luo</b>, Shuiwang Ji</li>
+            Joint Learning of Label and Environment Causal Independence for Graph Out-of-Distribution Generalization<br />
+            <a href="https://arxiv.org/abs/2306.01103">arXiv: 2306.01103</a>, 2023
+            <p>
             <li>Zhao Xu, Yaochen Xie, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
             3D Molecular Geometry Analysis with 2D Graphs<br />
             <a href="https://arxiv.org/abs/2305.13315">arXiv: 2305.13315</a>, 2023          
