--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul>
             <li>Xuan Zhang*, Limei Wang*, Jacob Helwig*, <b>Youzhi Luo*</b>, Cong Fu*, Yaochen Xie*, Meng Liu, Yuchao Lin, Zhao Xu, Keqiang Yan, Keir Adams, Maurice Weiler, Xiner Li, Tianfan Fu, Yucheng Wang, Haiyang Yu, YuQing Xie, Xiang Fu, Alex Strasser, Shenglong Xu, Yi Liu, Yuanqi Du, Alexandra Saxton, Hongyi Ling, Hannah Lawrence, Hannes Stark, Shurui Gui, Carl Edwards, Nicholas Gao, Adriana Ladera, Tailin Wu, Elyssa F. Hofgard, Aria Mansouri Tehrani, Rui Wang, Ameya Daigavane, Montgomery Bohde, Jerry Kurtin, Qian Huang, Tuong Phung, Minkai Xu, Chaitanya K. Joshi, Simon V. Mathis, Kamyar Azizzadenesheli, Ada Fang, Alan Aspuru-Guzik, Erik Bekkers, Michael Bronstein, Marinka Zitnik, Anima Anandkumar, Stefano Ermon, Pietro Lio, Rose Yu, Stephan Gunnemann, Jure Leskovec, Heng Ji, Jimeng Sun, Regina Barzilay, Tommi Jaakkola, Connor W. Coley, Xiaoning Qian, Xiaofeng Qian, Tess Smidt, and Shuiwang Ji (* equal contribution)</li>
             Artificial Intelligence for Science in Quantum, Atomistic, and Continuum Systems<br />
-            <a href="https://arxiv.org/abs/2307.08423">arXiv: 2307.084235</a>, 2023
+            <a href="https://arxiv.org/abs/2307.08423">arXiv: 2307.08423</a>, 2023
             <p>
             <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
             Towards Symmetry-Aware Generation of Periodic Materials<br />
@@ -143,6 +143,10 @@
             <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022, 2023</p></li>
             <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022</p></li>
             <li><p>Learning on Graphs Conference (<b>LOGS</b>), 2022</p></li>
+        </ul>
+        <h3>Journal Reviewer</h3>
+        <ul>
+            <li><p>Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>)</p></li>
         </ul>
 
         <h2>Teaching</h2>
