--- a/index.html
+++ b/index.html
@@ -70,21 +70,9 @@
             Artificial Intelligence for Science in Quantum, Atomistic, and Continuum Systems<br />
             <a href="https://arxiv.org/abs/2307.08423">arXiv: 2307.08423</a>, 2023
             <p>
-            <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
-            Towards Symmetry-Aware Generation of Periodic Materials<br />
-            <a href="https://arxiv.org/abs/2307.02707">arXiv: 2307.02707</a>, 2023
-            <p>
-            <li>Haiyang Yu, Meng Liu, <b>Youzhi Luo</b>, Alex Strasser, Xiaofeng Qian, Xiaoning Qian, Shuiwang Ji</li>
-            QH9: A Quantum Hamiltonian Prediction Benchmark for QM9 Molecules<br />
-            <a href="https://arxiv.org/abs/2306.09549">arXiv: 2306.09549</a>, 2023
-            <p>
             <li>Xiner Li, Shurui Gui, <b>Youzhi Luo</b>, Shuiwang Ji</li>
             Graph Structure and Feature Extrapolation for Out-of-Distribution Generalization<br />
             <a href="https://arxiv.org/abs/2306.08076">arXiv: 2306.08076</a>, 2023
-            <p>
-            <li>Shurui Gui, Meng Liu, Xiner Li, <b>Youzhi Luo</b>, Shuiwang Ji</li>
-            Joint Learning of Label and Environment Causal Independence for Graph Out-of-Distribution Generalization<br />
-            <a href="https://arxiv.org/abs/2306.01103">arXiv: 2306.01103</a>, 2023
             <p>
             <li>Zhao Xu, Yaochen Xie, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
             3D Molecular Geometry Analysis with 2D Graphs<br />
@@ -93,7 +81,19 @@
 
         <h2>Publications</h2>
         <ul>
-            <li>Yuchao Lin, Keqiang Yan, <b>Youzhi Luo</b>, Yi Liu, Xiaoning Qian, and Shuiwang Ji<br /></li>
+            <li>Haiyang Yu, Meng Liu, <b>Youzhi Luo</b>, Alex Strasser, Xiaofeng Qian, Xiaoning Qian, Shuiwang Ji</li>
+            QH9: A Quantum Hamiltonian Prediction Benchmark for QM9 Molecules<br />
+            The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), Datasets and Benchmarks Track, 2023
+            <p>
+            <li>Shurui Gui, Meng Liu, Xiner Li, <b>Youzhi Luo</b>, Shuiwang Ji</li>
+            Joint Learning of Label and Environment Causal Independence for Graph Out-of-Distribution Generalization<br />
+            The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2023
+            <p>
+            <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
+            Towards Symmetry-Aware Generation of Periodic Materials<br />
+            The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), <b>Spotlight</b>, 2023
+            <p>
+            <li>Yuchao Lin, Keqiang Yan, <b>Youzhi Luo</b>, Yi Liu, Xiaoning Qian, and Shuiwang Ji</li>
             Efficient Approximations of Complete Interatomic Potentials for Crystal Property Prediction<br />
             The 40th International Conference on Machine Learning (<b>ICML</b>), 2023
             <p>
@@ -138,11 +138,11 @@
         <h3>Conference Reviewer</h3>
         <ul>
             <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>), 2020, 2023</p></li>
-            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022, 2023</p></li>
+            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2023, 2024</p></li>
             <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022, 2023</p></li>
             <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022, 2023</p></li>
-            <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022</p></li>
-            <li><p>Learning on Graphs Conference (<b>LOGS</b>), 2022</p></li>
+            <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2023, 2024</p></li>
+            <li><p>Learning on Graphs Conference (<b>LOGS</b>), 2022, 2023</p></li>
         </ul>
         <h3>Journal Reviewer</h3>
         <ul>
