--- a/index.html
+++ b/index.html
@@ -57,10 +57,13 @@
                 <p>Machine Learning</p>
             </li>
             <li>
-                <p>Deep Generative Model</p>
+                <p>Graph Neural Networks</p>
             </li>
             <li>
-                <p>Computational Chemistry</p>
+                <p>Deep Generative Models</p>
+            </li>
+            <li>
+                <p>AI for Science</p>
             </li>
         </ul>
 
@@ -69,6 +72,10 @@
             <li>Xuan Zhang*, Limei Wang*, Jacob Helwig*, <b>Youzhi Luo*</b>, Cong Fu*, Yaochen Xie*, Meng Liu, Yuchao Lin, Zhao Xu, Keqiang Yan, Keir Adams, Maurice Weiler, Xiner Li, Tianfan Fu, Yucheng Wang, Haiyang Yu, YuQing Xie, Xiang Fu, Alex Strasser, Shenglong Xu, Yi Liu, Yuanqi Du, Alexandra Saxton, Hongyi Ling, Hannah Lawrence, Hannes Stark, Shurui Gui, Carl Edwards, Nicholas Gao, Adriana Ladera, Tailin Wu, Elyssa F. Hofgard, Aria Mansouri Tehrani, Rui Wang, Ameya Daigavane, Montgomery Bohde, Jerry Kurtin, Qian Huang, Tuong Phung, Minkai Xu, Chaitanya K. Joshi, Simon V. Mathis, Kamyar Azizzadenesheli, Ada Fang, Alan Aspuru-Guzik, Erik Bekkers, Michael Bronstein, Marinka Zitnik, Anima Anandkumar, Stefano Ermon, Pietro Lio, Rose Yu, Stephan Gunnemann, Jure Leskovec, Heng Ji, Jimeng Sun, Regina Barzilay, Tommi Jaakkola, Connor W. Coley, Xiaoning Qian, Xiaofeng Qian, Tess Smidt, and Shuiwang Ji (* equal contribution)</li>
             Artificial Intelligence for Science in Quantum, Atomistic, and Continuum Systems<br />
             <a href="https://arxiv.org/abs/2307.08423">arXiv: 2307.08423</a>, 2023
+            <p>
+            <li><b>Youzhi Luo</b>, Nathanael Yoder, Sercan Arik, Chen-Yu Lee, Tomas Pfister, Shuiwang Ji, Rose Yu</li>
+            Editable Temporal Graph Neural Network for Interactive Time Series Forecasting<br />
+            <a href="https://openreview.net/forum?id=mdeCUdRwzd">OpenReview</a>, 2023
             <p>
             <li>Xiner Li, Shurui Gui, <b>Youzhi Luo</b>, Shuiwang Ji</li>
             Graph Structure and Feature Extrapolation for Out-of-Distribution Generalization<br />
@@ -81,6 +88,10 @@
 
         <h2>Publications</h2>
         <ul>
+            <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
+            Towards Symmetry-Aware Generation of Periodic Materials<br />
+            The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), <b>Spotlight</b>, 2023
+            <p>
             <li>Haiyang Yu, Meng Liu, <b>Youzhi Luo</b>, Alex Strasser, Xiaofeng Qian, Xiaoning Qian, Shuiwang Ji</li>
             QH9: A Quantum Hamiltonian Prediction Benchmark for QM9 Molecules<br />
             The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), Datasets and Benchmarks Track, 2023
@@ -88,10 +99,6 @@
             <li>Shurui Gui, Meng Liu, Xiner Li, <b>Youzhi Luo</b>, Shuiwang Ji</li>
             Joint Learning of Label and Environment Causal Independence for Graph Out-of-Distribution Generalization<br />
             The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2023
-            <p>
-            <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
-            Towards Symmetry-Aware Generation of Periodic Materials<br />
-            The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), <b>Spotlight</b>, 2023
             <p>
             <li>Yuchao Lin, Keqiang Yan, <b>Youzhi Luo</b>, Yi Liu, Xiaoning Qian, and Shuiwang Ji</li>
             Efficient Approximations of Complete Interatomic Potentials for Crystal Property Prediction<br />
@@ -109,25 +116,25 @@
             Generating 3D Molecules for Target Protein Binding<br />
             The 39th International Conference on Machine Learning (<b>ICML</b>), <b>Long Talk</b>, 2022
             <p>
-            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
-            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
-            <b>Bioinformatics</b>, 2022
-            <p>
             <li><b>Youzhi Luo</b>, and Shuiwang Ji<br /></li>
             An Autoregressive Flow Model for 3D Molecular Geometry Generation<br />
             The 10th International Conference on Learning Representations (<b>ICLR</b>), 2022
+            <p>
+            <li>Zhengyang Wang*, Meng Liu*, <b>Youzhi Luo*</b>, Zhao Xu*, Yaochen Xie*, Limei Wang*, Lei Cai*, and Shuiwang Ji (* equal contribution)<br /></li>
+            Advanced Graph and Sequence Neural Networks for Molecular Property Prediction and Drug Discovery<br />
+            <b>Bioinformatics</b>, 2022
             <p>
             <li>Meng Liu*, <b>Youzhi Luo*</b>, Limei Wang*, Yaochen Xie*, Hao Yuan*, Shurui Gui*, Haiyang Yu*, Zhao Xu, Jingtun Zhang, Yi Liu, Keqiang Yan, Haoran Liu, Cong Fu, Bora Oztekin, Xuan Zhang, and Shuiwang Ji (* equal contribution)<br /></li>
             DIG: A Turnkey Library for Diving into Graph Deep Learning Research<br />
             Journal of Machine Learning Research (<b>JMLR</b>), 2021
             <p>
-            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
-            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
-            NeurIPS 2021 AI for Science Workshop, 2021
-            <p>
             <li>Qi Qi*, <b>Youzhi Luo*</b>, Zhao Xu*, Shuiwang Ji, and Tianbao Yang (* equal contribution)<br /></li>
             Stochastic Optimization of Area Under Precision-Recall Curve for Deep Learning with Provable Convergence<br />
             The 35th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021
+            <p>
+            <li>Meng Liu, Cong Fu, Xuan Zhang, Limei Wang, Yaochen Xie, Hao Yuan, <b>Youzhi Luo</b>, Zhao Xu, Shenglong Xu, Shuiwang Ji</li>
+            Fast Quantum Property Prediction via Deeper 2D and 3D Graph Networks<br />
+            NeurIPS 2021 AI for Science Workshop, 2021
             <p>
             <li><b>Youzhi Luo</b>, Keqiang Yan, and Shuiwang Ji<br /></li>
             GraphDF: A Discrete Flow Model for Molecular Graph Generation<br />
@@ -138,15 +145,15 @@
         <h3>Conference Reviewer</h3>
         <ul>
             <li><p>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>), 2020, 2023</p></li>
-            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2023, 2024</p></li>
+            <li><p>International Conference on Learning Representations (<b>ICLR</b>), 2022, 2023, 2024</p></li>
             <li><p>International Conference on Machine Learning (<b>ICML</b>), 2022, 2023</p></li>
             <li><p>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2022, 2023</p></li>
-            <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2023, 2024</p></li>
+            <li><p>AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022, 2023</p></li>
             <li><p>Learning on Graphs Conference (<b>LOGS</b>), 2022, 2023</p></li>
         </ul>
         <h3>Journal Reviewer</h3>
         <ul>
-            <li><p>Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>)</p></li>
+            <li><p>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>)</p></li>
         </ul>
 
         <h2>Teaching</h2>
