--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
         <h2>Short Biography</h2>
         <p>I received my B.E. in Automation in 2019 from University of Science and Technology of China. I am currently a Ph.D. candidate in Department of Computer Science & Engineering, Texas A&M
             University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
-            <font color="bg-light">
-            I am actively looking for full-time applied scientist/research scientist/data scientist/machine learning engineer positions in industry. Feel free to contact me if you would like to offer good opportunities!
-        </font>
 
         <h2>Education</h2>
         <ul>
@@ -79,15 +76,15 @@
             <p>
             <li>Xiner Li, Shurui Gui, <b>Youzhi Luo</b>, Shuiwang Ji</li>
             Graph Structure and Feature Extrapolation for Out-of-Distribution Generalization<br />
-            <a href="https://arxiv.org/abs/2306.08076">arXiv: 2306.08076</a>, 2023
-            <p>
-            <li>Zhao Xu, Yaochen Xie, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
-            3D Molecular Geometry Analysis with 2D Graphs<br />
-            <a href="https://arxiv.org/abs/2305.13315">arXiv: 2305.13315</a>, 2023          
+            <a href="https://arxiv.org/abs/2306.08076">arXiv: 2306.08076</a>, 2023          
         </ul>
 
         <h2>Publications</h2>
         <ul>
+            <li>Zhao Xu, Yaochen Xie, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
+            3D Molecular Geometry Analysis with 2D Graphs<br />
+            SIAM International Conference on Data Mining (<b>SDM</b>), 2024
+            <p>
             <li><b>Youzhi Luo</b>, Chengkai Liu, Shuiwang Ji</li>
             Towards Symmetry-Aware Generation of Periodic Materials<br />
             The 37th Conference on Neural Information Processing Systems (<b>NeurIPS</b>), <b>Spotlight</b>, 2023
