--- a/index.html
+++ b/index.html
@@ -18,29 +18,26 @@
                 <td>
                     <img src="img/profile.jpg" alt="photography" width="150px" height="180px" />&nbsp;</td>
                 <td align="left">
-                    <p><b>Youzhi Luo, Ph.D. candidate</b><br />
-                        <a href="http://engineering.tamu.edu/cse/">Department of Computer Science &
-                            Engineering</a><br />
-                        <a href="https://www.tamu.edu/">Texas A&M University</a><br />
-                        364 L.F. Peterson Building<br />
-                        435 Nagle Street<br />
-                        College Station, TX 77843<br />
+                    <p><b>Youzhi Luo, Applied Scientist</b><br />
+                        <a href="https://aws.amazon.com/bedrock/">AWS Bedrock</a><br />
+                        2795 Augustine Dr<br />
+                        Santa Clara, CA 95054<br />
                         E-mail: <a href="mailto:yzluo@tamu.edu">yzluo@tamu.edu</a><br />
-                        <a href="https://scholar.google.com/citations?user=3lqQFIoAAAAJ&hl=en">Google Scholar</a></p>
+                        <a href="https://scholar.google.com/citations?user=V95f1a0AAAAJ&hl=en">Google Scholar</a></p>
                         <a href="https://github.com/lyzustc"><img src="img/github.jpeg" alt="" width="25px" height="33px"></a>
                         <a href="https://www.linkedin.com/in/youzhi-luo-139981172/"><img src="img/btn_viewmy_160x33.png" alt="" width="160px" height="33px"></a>
                 </td>
             </tr>
         </table>
         <h2>Short Biography</h2>
-        <p>I received my B.E. in Automation in 2019 from University of Science and Technology of China. I am currently a Ph.D. candidate in Department of Computer Science & Engineering, Texas A&M
-            University. My advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>.</p>
+        <p>I received my B.E. in Automation in 2019 from University of Science and Technology of China and my Ph.D. in Computer Science in 2024 from Texas A&M
+            University. My Ph.D. advisor is <a href="http://people.tamu.edu/~sji/">Dr. Shuiwang Ji</a>. I am currently working as an applied scientist at AWS Bedrock</p>
 
         <h2>Education</h2>
         <ul>
             <li>
                 <p>Ph.D., Computer Science, <a href="https://www.tamu.edu/">Texas A&M University</a>, September 2019 -
-                    May 2024 (Expected)</p>
+                    May 2024</p>
             </li>
             <li>
                 <p>B.E., Automation, <a href="http://en.ustc.edu.cn/">University of Science and Technology
@@ -54,13 +51,7 @@
                 <p>Machine Learning</p>
             </li>
             <li>
-                <p>Graph Neural Networks</p>
-            </li>
-            <li>
-                <p>Deep Generative Models</p>
-            </li>
-            <li>
-                <p>AI for Science</p>
+                <p>Generative AI</p>
             </li>
         </ul>
 
@@ -73,14 +64,15 @@
             <li><b>Youzhi Luo</b>, Nathanael Yoder, Sercan Arik, Chen-Yu Lee, Tomas Pfister, Shuiwang Ji, Rose Yu</li>
             Editable Temporal Graph Neural Network for Interactive Time Series Forecasting<br />
             <a href="https://openreview.net/forum?id=mdeCUdRwzd">OpenReview</a>, 2023
-            <p>
-            <li>Xiner Li, Shurui Gui, <b>Youzhi Luo</b>, Shuiwang Ji</li>
-            Graph Structure and Feature Extrapolation for Out-of-Distribution Generalization<br />
-            <a href="https://arxiv.org/abs/2306.08076">arXiv: 2306.08076</a>, 2023          
+            <p>          
         </ul>
 
         <h2>Publications</h2>
         <ul>
+            <li>Xiner Li, Shurui Gui, <b>Youzhi Luo</b>, Shuiwang Ji</li>
+            Graph Structure Extrapolation for Out-of-Distribution Generalization<br />
+            The 41st International Conference on Machine Learning (<b>ICML</b>), 2024
+            <p>
             <li>Zhao Xu, Yaochen Xie, <b>Youzhi Luo</b>, Xuan Zhang, Xinyi Xu, Meng Liu, Kaleb Dickerson, Cheng Deng, Maho Nakata, Shuiwang Ji</li>
             3D Molecular Geometry Analysis with 2D Graphs<br />
             SIAM International Conference on Data Mining (<b>SDM</b>), 2024
